--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
 </head>
 <body>
    <header class="header">
-      <img src="img/header.jpg" alt="">
+      <a href="http://google.com"><img src="img/header.jpg" alt=""></a>
    </header>
 
    <main class="main">
       <h1>Самый большой заголовок</h1>
+      <a href="#point" title="В footer">переместиться к подвалу по клику</a>
       <ul class="main__menu menu">
          <li>
             <a href="" class="menu__link">Пункт 1</a>
@@ -39,17 +40,24 @@
                </li>
             </ul>
          </li>
+         <li>
+            <a href="" class="menu__link">Пункт 4</a>
+         </li>
+         <li>
+            <a href="" class="menu__link">Пункт 5</a>
+         </li>
       </ul>
 
       <div class="main__text">
          <p>Lorem ipsum dolor, <span class="main__text-label">sit amet consectetur</span> adipisicing elit. Natus, optio!</p>
          <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Natus, optio!</p>
          <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.<br> Natus, optio!</p>
+         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Blanditiis assumenda laudantium asperiores minima ducimus, recusandae sint provident suscipit pariatur eius non, natus modi consequuntur officia. Ex, recusandae illo, consequatur sunt cumque quibusdam harum fugiat eaque dolor at inventore, sint reprehenderit tempora voluptatum vero ut accusantium laborum corporis voluptatem id iste ab assumenda dignissimos. Sapiente, in odit. Vitae est reprehenderit quae tempore facere ipsam, labore voluptatibus animi neque, vel quasi doloremque optio autem cumque. Debitis dolorem quam nobis rem, quia consequuntur error quas odit? Soluta sunt illum blanditiis debitis quis impedit optio <br>deserunt tempora incidunt, earum ut! Amet odio, sit ratione esse unde rerum odit molestiae incidunt quibusdam modi voluptas natus officia nobis itaque in repellat veritatis pariatur, porro recusandae delectus laboriosam. Distinctio incidunt, fugit inventore quibusdam quidem sit! Neque veritatis quia non tempore labore ducimus temporibus animi assumenda, fuga, ab a exercitationem ea quo quas pariatur voluptatem odio eaque culpa nulla ad consectetur ratione maiores impedit. Unde ratione, dignissimos commodi vitae consequuntur odio dolore reiciendis debitis fugit nemo cupiditate aspernatur laboriosam consectetur quo magnam obcaecati? Consequuntur voluptatem quaerat vitae, sint in iste veniam. Aut a unde itaque consequatur nesciunt laudantium aliquam sit officia ad dolore, iusto maxime doloribus voluptatibus ut.</p>
       </div>
 
    </main>
 
-   <footer class="footer">
+   <footer class="footer" id="point">
     <span>Lorem.</span> <span>Lorem ipsum dolor sit.</span>
    </footer>
 </body>
